#if 0 /*
project('meson_build_test', 'cpp', default_options: ['cpp_str=c++11'])
meson_build_cpp = custom_target('meson.build.cpp',
                                input: 'meson.build',
                                output: 'meson.build.cpp',
                                command: ['cp', '@INPUT@', '@OUTPUT@'],
                                build_by_default: true)
executable('meson_build_test', meson_build_cpp)
''' */
#endif
#include <stdio.h>
int main()
{
  printf("Hello, World!\n");
}
#if 0 /*
'''
# */
#endif
